# llm_router

./: .dockerignore  .env.template  .env_keys.template  .gitignore  Cargo.toml  LICENSE  README.md  llm-router.yaml  logging.yml  makefile  requirements.txt  simple.py
.github/workflows/: test.yml
config/: .env.template  .env_keys.template
dockerfiles/: Dockerfile  Dockerfile.dev  Dockerfile.vaultsecrets  docker-compose.dev.yml  docker-compose.yml  vault-init.sh
kube/: create_cluster.sh  falcon-service.yaml  falcon.yaml  llama2-service.yaml  llama2.yaml  llm-service.yaml  mistral-service.yaml  mistral.yaml
llm_router/: app.py  constants.py  secrets.py
llm_router/models/: huggingface.py  mock.py  models.py
models/: huggingface.json  mock.json
models/chat/: claude.json  huggingface.json  openai.json  reflection.json
src/: errors.rs  llm_traits.rs  logging.rs  main.rs  mock.rs  secret_manager.rs  single_turn.rs
src/chat/: chat_trait.rs  errors.rs  mod.rs  state.rs
src/chat/models/: claude.rs  huggingface.rs  mock.rs  mod.rs  openai.rs  reflection.rs  vertex.rs
src/single_turn/: huggingface.rs  mock.rs  mod.rs  single_turn_trait.rs
tests/: Dockerfile  docker-compose.yml  pytest.ini  requirements.txt  test_mock.py  test_model.py
tests/test_chat/: test_mock.py  test_model.py
