[package]
name = "llm_router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
reqwest = { version = "0.11", features = ["json"] }
vaultrs = "0.7.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23.2", features = ["tokio-comp"] }

async-trait = "0.1.73"
hyper = { version = "0.14.24", features = ["stream"] }
tokio = { version = "1.25.0", features = ["rt", "macros", "rt-multi-thread"] }

tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3.17"
thiserror = "1.0.31"
anyhow = "1.0.75"